# noX

./: global_theme.style.js  index.html  login.html  main.js  package-lock.json  package.json  preload.js  renderer.js  rendererLogin.js  rendererMain.js
front/: loginMng.js  package-lock.json  package.json
front/proto/: noxlogin.proto
nox_api/: Cargo.toml  build.rs
nox_api/proto/: noxlogin.proto
nox_api/src/: lib.rs  server.rs
proto/: loginMng.js
