[package]
name = "nox_api"
version = "0.1.0"
edition = "2021"

[lib]
    path = "src/lib.rs"

[[bin]]
    name = "nox_login_server"
    path = "src/server.rs"

[dependencies]
tonic = "0.8.0"
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
prost = "0.11.0"

[build-dependencies]
tonic-build = "0.8.0"